--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Breccia Inmuebles y Negocios | Administración de Consorcios e Inmobiliaria</title>
     <link rel="stylesheet" href="breccia.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" sizes="any">
+<link rel="shortcut icon" href="/favicon.ico">
+
+    
 </head>
 <body>
     <header>
