--- a/administracion.html
+++ b/administracion.html
@@ -61,7 +61,7 @@
                     <div style="color: #666; font-weight: 600;">Unidades</div>
                 </div>
                 <div style="background: white; padding: 2rem; border-radius: 15px; text-align: center; box-shadow: 0 3px 15px rgba(0,0,0,0.08);">
-                    <div style="font-size: 3rem; color: #8b3a4f; margin-bottom: 0.5rem;">15+</div>
+                    <div style="font-size: 3rem; color: #8b3a4f; margin-bottom: 0.5rem;">25+</div>
                     <div style="color: #666; font-weight: 600;">Años</div>
                 </div>
                 <div style="background: white; padding: 2rem; border-radius: 15px; text-align: center; box-shadow: 0 3px 15px rgba(0,0,0,0.08);">
@@ -255,7 +255,7 @@
 
             <div class="team-card scale-in stagger-1">
                 <div class="team-avatar">👨‍🔧</div>
-                <h3>Juan Barrios</h3>
+                <h3>Juan Ignacio Barrios</h3>
                 <p class="team-role">Inspector</p>
                 <p style="color: #666;">Supervisión de obras y tareas de mantenimiento</p>
             </div>
