--- a/administracion.html
+++ b/administracion.html
@@ -203,68 +203,91 @@
             Profesionales comprometidos con la excelencia en la administración de consorcios
         </p>
         
-        <div class="equipo-grid">
-            <div class="team-card scale-in">
-                <div class="team-avatar">👩‍💼</div>
-                <h3>María Luján Breccia</h3>
-                <p class="team-role">Administradora Principal</p>
-                <p style="color: #666;">Responsable de la gestión integral de todos los consorcios administrados</p>
-            </div>
+        <!-- GRUPO 1: Dirección (3 personas) -->
+        <div style="max-width: 1200px; margin: 0 auto 3rem;">
+            <h3 style="text-align: center; color: #8b3a4f; font-size: 1.3rem; margin-bottom: 2rem; font-weight: 600;">Dirección</h3>
+            <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 2rem; max-width: 900px; margin: 0 auto;">
+                <div class="team-card scale-in">
+                    <div class="team-avatar">👩‍💼</div>
+                    <h3>María Luján Breccia</h3>
+                    <p class="team-role">Administradora Principal</p>
+                    <p style="color: #666;">Responsable de la gestión integral de todos los consorcios administrados</p>
+                </div>
 
-            <div class="team-card scale-in stagger-1">
-                <div class="team-avatar">👩‍💼</div>
-                <h3>María José Zwicker</h3>
-                <p class="team-role">Contadora</p>
-                <p style="color: #666;">Liquidación de expensas, balance de cuentas y gestión financiera</p>
-            </div>
+                <div class="team-card scale-in stagger-1">
+                    <div class="team-avatar">👩‍💼</div>
+                    <h3>María José Zwicker</h3>
+                    <p class="team-role">Contadora</p>
+                    <p style="color: #666;">Área Contable y Financiera</p>
+                </div>
 
-            <div class="team-card scale-in stagger-2">
-                <div class="team-avatar">👩‍💻</div>
-                <h3>Magali Parodi</h3>
-                <p class="team-role">Gestión Administrativa</p>
-                <p style="color: #666;">Coordinación de trámites y documentación de consorcios</p>
+                <div class="team-card scale-in stagger-2">
+                    <div class="team-avatar">👨‍💼</div>
+                    <h3>Esteban Bianca</h3>
+                    <p class="team-role">Arquitecto</p>
+                    <p style="color: #666;">Área Técnica – Arquitectura y Obras</p>
+                </div>
             </div>
+        </div>
 
-            <div class="team-card scale-in stagger-3">
-                <div class="team-avatar">👨‍💻</div>
-                <h3>Joaquín Parodi</h3>
-                <p class="team-role">Gestión Administrativa</p>
-                <p style="color: #666;">Organización y seguimiento de procesos administrativos</p>
+        <!-- GRUPO 2: Gestión Administrativa (4 personas) -->
+        <div style="max-width: 1200px; margin: 0 auto 3rem;">
+            <h3 style="text-align: center; color: #8b3a4f; font-size: 1.3rem; margin-bottom: 2rem; font-weight: 600;">Gestión Administrativa</h3>
+            <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 2rem;">
+                <div class="team-card scale-in stagger-3">
+                    <div class="team-avatar">👩‍💻</div>
+                    <h3>Magali Parodi</h3>
+                    <p class="team-role">Gestión Administrativa</p>
+                    <p style="color: #666;">Coordinación de trámites y documentación de consorcios</p>
+                </div>
+
+                <div class="team-card scale-in stagger-1">
+                    <div class="team-avatar">👨‍💻</div>
+                    <h3>Joaquín Parodi</h3>
+                    <p class="team-role">Gestión Administrativa</p>
+                    <p style="color: #666;">Organización y seguimiento de procesos administrativos</p>
+                </div>
+
+                <div class="team-card scale-in stagger-2">
+                    <div class="team-avatar">👩‍💼</div>
+                    <h3>Valentina Sánchez Breccia</h3>
+                    <p class="team-role">Gestión Administrativa</p>
+                    <p style="color: #666;">Coordinación general y soporte operativo</p>
+                </div>
+
+                <div class="team-card scale-in stagger-3">
+                    <div class="team-avatar">👩‍💻</div>
+                    <h3>Rosario Montiel</h3>
+                    <p class="team-role">Atención al Cliente</p>
+                    <p style="color: #666;">Gestión de reclamos, consultas y atención a propietarios</p>
+                </div>
             </div>
+        </div>
 
-            <div class="team-card scale-in stagger-1">
-                <div class="team-avatar">👩‍💼</div>
-                <h3>Valentina Sánchez Breccia</h3>
-                <p class="team-role">Gestión Administrativa</p>
-                <p style="color: #666;">Coordinación general y soporte operativo</p>
-            </div>
+        <!-- GRUPO 3: Inspectores (3 personas) -->
+        <div style="max-width: 1200px; margin: 0 auto;">
+            <h3 style="text-align: center; color: #8b3a4f; font-size: 1.3rem; margin-bottom: 2rem; font-weight: 600;">Inspectores</h3>
+            <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 2rem; max-width: 900px; margin: 0 auto;">
+                <div class="team-card scale-in stagger-1">
+                    <div class="team-avatar">👨‍🔧</div>
+                    <h3>Adán Tarricone</h3>
+                    <p class="team-role">Inspector</p>
+                    <p style="color: #666;">Inspección y control de mantenimiento en consorcios</p>
+                </div>
 
-            <div class="team-card scale-in stagger-2">
-                <div class="team-avatar">👩‍💻</div>
-                <h3>Rosario Montiel</h3>
-                <p class="team-role">Atención al Cliente</p>
-                <p style="color: #666;">Gestión de reclamos, consultas y atención a propietarios</p>
-            </div>
+                <div class="team-card scale-in stagger-2">
+                    <div class="team-avatar">👨‍🔧</div>
+                    <h3>Juan Ignacio Barrios</h3>
+                    <p class="team-role">Inspector</p>
+                    <p style="color: #666;">Supervisión de obras y tareas de mantenimiento</p>
+                </div>
 
-            <div class="team-card scale-in stagger-3">
-                <div class="team-avatar">👨‍🔧</div>
-                <h3>Adán Tarricone</h3>
-                <p class="team-role">Inspector</p>
-                <p style="color: #666;">Inspección y control de mantenimiento en consorcios</p>
-            </div>
-
-            <div class="team-card scale-in stagger-1">
-                <div class="team-avatar">👨‍🔧</div>
-                <h3>Juan Ignacio Barrios</h3>
-                <p class="team-role">Inspector</p>
-                <p style="color: #666;">Supervisión de obras y tareas de mantenimiento</p>
-            </div>
-
-            <div class="team-card scale-in stagger-2">
-                <div class="team-avatar">👨‍🔧</div>
-                <h3>Thiago Tarricone</h3>
-                <p class="team-role">Inspector</p>
-                <p style="color: #666;">Control de calidad y seguimiento de proveedores</p>
+                <div class="team-card scale-in stagger-3">
+                    <div class="team-avatar">👨‍🔧</div>
+                    <h3>Thiago Tarricone</h3>
+                    <p class="team-role">Inspector</p>
+                    <p style="color: #666;">Control de calidad y seguimiento de proveedores</p>
+                </div>
             </div>
         </div>
     </section>
