arreglo de CTA y carga de fotos

--- a/administracion.html
+++ b/administracion.html
@@ -293,11 +293,23 @@
     </section>
 
     <!-- CTA -->
-    <section style="background: linear-gradient(135deg, #6b2c3e, #8b3a4f); padding: 80px 2rem; text-align: center; color: white;">
-        <h2 style="font-size: 2.5rem; margin-bottom: 1rem;">¿Querés que administremos tu consorcio?</h2>
-        <p style="font-size: 1.2rem; margin-bottom: 2rem; opacity: 0.95;">Contactanos para una consulta sin compromiso</p>
-        <a href="index.html#contacto" class="cta-button">Solicitar Información</a>
-    </section>
+   <!-- CTA -->
+<section style="background: linear-gradient(135deg, #6b2c3e, #8b3a4f); padding: 80px 2rem; text-align: center; color: white;">
+    <div style="max-width: 900px; margin: 0 auto;">
+        <h2 style="font-size: 2.5rem; margin-bottom: 1rem;">¿Ya sos propietario de un consorcio administrado por nosotros?</h2>
+        <p style="font-size: 1.2rem; margin-bottom: 2.5rem; opacity: 0.95;">
+            Accedé a tu información 24/7 desde nuestro portal digital
+        </p>
+        <div style="display: flex; gap: 1.5rem; justify-content: center; flex-wrap: wrap;">
+            <a href="https://joinup.i-data.com.ar/ingresar" target="_blank" class="cta-button" style="background: white; color: #6b2c3e;">
+                🔐 Acceder al Portal
+            </a>
+            <a href="index.html#contacto" class="cta-button" style="background: rgba(255,255,255,0.2); color: white; border: 2px solid white;">
+                📞 Soporte
+            </a>
+        </div>
+    </div>
+</section>
 
     <footer>
         <p>&copy; 2026 Breccia Inmuebles y Negocios. Todos los derechos reservados.</p>
