propiedades agregadas y modales de contacto funcionando

--- a/administracion.html
+++ b/administracion.html
@@ -47,7 +47,7 @@
         <div style="max-width: 1200px; margin: 0 auto;">
             <div style="text-align: center; margin-bottom: 2rem;">
                 <a href="index.html#servicios" class="back-button">
-                    ← Volver a Servicios
+                    ← Volver a Todos los Servicios
                 </a>
             </div>
             
@@ -277,7 +277,7 @@
 
                 <div class="team-card scale-in stagger-2">
                     <div class="team-avatar">👨‍🔧</div>
-                    <h3>Juan Ignacio Barrios</h3>
+                    <h3>Juan Ignacio Barros Sirochinsky</h3>
                     <p class="team-role">Inspector</p>
                     <p style="color: #666;">Supervisión de obras y tareas de mantenimiento</p>
                 </div>
