--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
     </script>
     
     <link rel="stylesheet" href="breccia.css">
-    <link rel="icon" href="/favicon.ico" sizes="any">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="icon" href="/favicon-V3.ico" sizes="any">
+    <link rel="shortcut icon" href="/favicon-V3.ico">
 </head>
 <body>
     <header>
