--- a/administracion.html
+++ b/administracion.html
@@ -6,7 +6,9 @@
     <title>Administración de Consorcios | Breccia</title>
     <link rel="stylesheet" href="breccia.css">
     <link rel="stylesheet" href="admi.css">
-    <link rel="icon" href="/favicon-V3.ico" sizes="any">
+    <link rel="icon" type="image/x-icon" href="/favicon-V3.ico?v=3">
+<link rel="shortcut icon" href="/favicon-V3.ico?v=3">
+<link rel="apple-touch-icon" href="/favicon-V3.ico?v=3">
 </head>
 <body>
     <header>
@@ -218,7 +220,7 @@
                     <div class="team-avatar">👩‍💼</div>
                     <h3>María José Zwicker</h3>
                     <p class="team-role">Contadora</p>
-                    <p style="color: #666;">Área Contable y Financiera</p>
+                    <p style="color: #666;">Área Contable</p>
                 </div>
 
                 <div class="team-card scale-in stagger-2">
