--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
     </script>
     
     <link rel="stylesheet" href="breccia.css">
-    <link rel="icon" href="/favicon-V3.ico" sizes="any">
-    <link rel="shortcut icon" href="/favicon-V3.ico">
+   <link rel="icon" type="image/x-icon" href="/favicon-V3.ico?v=3">
+<link rel="shortcut icon" href="/favicon-V3.ico?v=3">
+<link rel="apple-touch-icon" href="/favicon-V3.ico?v=3">
 </head>
 <body>
     <header>
