--- a/inmobiliaria.html
+++ b/inmobiliaria.html
@@ -6,7 +6,9 @@
     <title>Servicios Inmobiliarios | Breccia</title>
     <link rel="stylesheet" href="breccia.css">
     <link rel="stylesheet" href="inmobiliaria.css">
-    <link rel="icon" href="/favicon-V3.ico" sizes="any">
+<link rel="icon" type="image/x-icon" href="/favicon-V3.ico?v=3">
+<link rel="shortcut icon" href="/favicon-V3.ico?v=3">
+<link rel="apple-touch-icon" href="/favicon-V3.ico?v=3">
 </head>
 <body>
     <header>
