cambios para telefono

--- a/administracion.html
+++ b/administracion.html
@@ -6,9 +6,13 @@
     <title>Administración de Consorcios | Breccia</title>
     <link rel="stylesheet" href="breccia.css">
     <link rel="stylesheet" href="admi.css">
-    <link rel="icon" type="image/x-icon" href="/favicon-V3.ico?v=3">
-<link rel="shortcut icon" href="/favicon-V3.ico?v=3">
-<link rel="apple-touch-icon" href="/favicon-V3.ico?v=3">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
+<!-- Favicon -->
+<link rel="icon" type="image/x-icon" href="/favicon-V3.ico?v=20260125">
+<link rel="shortcut icon" href="/favicon-V3.ico?v=20260125">
+<link rel="apple-touch-icon" href="/favicon-V3.ico?v=20260125">
+<link rel="manifest" href="/site.webmanifest">
+<meta name="theme-color" content="#6b2c3e">
 </head>
 <body>
     <header>
