--- a/inmobiliaria.html
+++ b/inmobiliaria.html
@@ -6,9 +6,12 @@
     <title>Servicios Inmobiliarios | Breccia</title>
     <link rel="stylesheet" href="breccia.css">
     <link rel="stylesheet" href="inmobiliaria.css">
-<link rel="icon" type="image/x-icon" href="/favicon-V3.ico?v=3">
-<link rel="shortcut icon" href="/favicon-V3.ico?v=3">
-<link rel="apple-touch-icon" href="/favicon-V3.ico?v=3">
+<!-- Favicon -->
+<link rel="icon" type="image/x-icon" href="/favicon-V3.ico?v=20260125">
+<link rel="shortcut icon" href="/favicon-V3.ico?v=20260125">
+<link rel="apple-touch-icon" href="/favicon-V3.ico?v=20260125">
+<link rel="manifest" href="/site.webmanifest">
+<meta name="theme-color" content="#6b2c3e">
 </head>
 <body>
     <header>
