--- a/administracion.html
+++ b/administracion.html
@@ -2,16 +2,21 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Administración de Consorcios | Breccia</title>
     <link rel="stylesheet" href="breccia.css">
     <link rel="stylesheet" href="admi.css">
  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0">
-<!-- Favicon -->
-<link rel="icon" type="image/x-icon" href="/favicon-V3.ico?v=20260125">
-<link rel="shortcut icon" href="/favicon-V3.ico?v=20260125">
-<link rel="apple-touch-icon" href="/favicon-V3.ico?v=20260125">
-<link rel="manifest" href="/site.webmanifest">
+<!-- Favicon - Cache Busting -->
+<link rel="icon" type="image/x-icon" href="/favicon-V3.ico?v=20260125143000">
+<link rel="shortcut icon" href="/favicon-V3.ico?v=20260125143000">
+<link rel="apple-touch-icon" sizes="180x180" href="/favicon-V3.ico?v=20260125143000">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-V3.ico?v=20260125143000">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-V3.ico?v=20260125143000">
+<link rel="manifest" href="/site.webmanifest?v=20260125143000">
 <meta name="theme-color" content="#6b2c3e">
 </head>
 <!-- Agregar antes del </body> en todos los HTML -->
