--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="es-AR">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- SEO BÁSICO -->
@@ -102,10 +105,13 @@
     
     <link rel="stylesheet" href="breccia.css">
 <!-- Favicon -->
-<link rel="icon" type="image/x-icon" href="/favicon-V3.ico?v=20260125">
-<link rel="shortcut icon" href="/favicon-V3.ico?v=20260125">
-<link rel="apple-touch-icon" href="/favicon-V3.ico?v=20260125">
-<link rel="manifest" href="/site.webmanifest">
+
+<link rel="icon" type="image/x-icon" href="/favicon-V3.ico?v=20260125143000">
+<link rel="shortcut icon" href="/favicon-V3.ico?v=20260125143000">
+<link rel="apple-touch-icon" sizes="180x180" href="/favicon-V3.ico?v=20260125143000">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-V3.ico?v=20260125143000">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-V3.ico?v=20260125143000">
+<link rel="manifest" href="/site.webmanifest?v=20260125143000">
 <meta name="theme-color" content="#6b2c3e">
 </head>
 <!-- Agregar antes del </body> en todos los HTML -->
